--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Neon Glow - Bootstrap 4 Theme</title>
+    <title>Sanjeev BA Homepage</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    
+
 <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
@@ -15,29 +15,32 @@
   </head>
   <body>
 
-  
+
 <div class="jumbotron bg-transparent mb-0 radius-0">
   <div class="container">
       <div class="row">
         <div class="col-xl-6">
-          <h1 class="display-2">Neon Glo<span class="vim-caret">w</span></h1>
-          <div class="lead mb-3 text-mono text-success">This is a starter template with a jumbotron</div>
+          <h1 class="display-2">Sanjeev BA<span class="vim-caret">w</span></h1>
+          <div class="lead mb-3 text-mono text-success">Sharing thoughts and inspirations in random order.</div>
           <div class="text-mono">
             <a href="#!"
                title="Download Theme"
                class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-              A Button
+              Strength & Opportunities
             </a>
             <a href="#!"
                class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
-              Another Button
+              Weakness & Threats
             </a>
           </div>
 
-          <div class="text-darkgrey text-mono my-2">Some muted text</div>
+          <div class="text-darkgrey text-mono my-2">Known is a drop, unknown is an ocean!<br/></div>
 
           <p class="mt-5 text-grey text-spacey">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, dignissimos provident. Alias, aliquid, cum cumque deleniti dignissimos eos exercitationem explicabo illum inventore laboriosam nihil nobis nostrum praesentium recusandae sequi, sint!
+            Programming the Internet of Things (IoT) with a "horses for courses" approach.<br/>
+            Applying Artificial Intelligence (AI) and Machine Learning (ML) solutions where applicable.<br/>
+            Building apps and services that impact millions of devices, fixing code in production.<br/>
+            Motto : Technology's Home Run : Ubiquity!<br/>
           </p>
         </div>
       </div>
@@ -50,10 +53,10 @@
   <div class="container py-5">
     <h1>Thanks</h1>
 
-    <p>Thank you for downloading this theme. If you have trouble or find a bug, please open an issue on GitHub:<br>
+    <p>Thank for visiting my website. Hope you enjoy the ride!<br>
     <a href="https://github.com/HackerThemes/theme-machine">https://github.com/HackerThemes/theme-machine</a></p>
 
-   
+
   </div>
 
     <!-- Optional JavaScript -->
