--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <div class="container">
       <div class="row">
         <div class="col-xl-6">
-          <h1 class="display-2">Sanjeev BA<span class="vim-caret">w</span></h1>
-          <div class="lead mb-3 text-mono text-success">Sharing thoughts and inspirations in random order.</div>
+          <h1 class="display-2">Sanjeev<span class="vim-caret">BA</span></h1>
+          <div class="lead mb-3 text-mono text-success">My thoughts and inspirations.</div>
           <div class="text-mono">
             <a href="#!"
                title="Download Theme"
@@ -34,13 +34,12 @@
             </a>
           </div>
 
-          <div class="text-darkgrey text-mono my-2">Known is a drop, unknown is an ocean!<br/></div>
+          <div class="text-darkgrey text-mono my-2">Known is a drop, unknown is an ocean!<br/>Technology's Home Run : Ubiquity!</div>
 
           <p class="mt-5 text-grey text-spacey">
-            Programming the Internet of Things (IoT) with a "horses for courses" approach.<br/>
-            Applying Artificial Intelligence (AI) and Machine Learning (ML) solutions where applicable.<br/>
-            Building apps and services that impact millions of devices, fixing code in production.<br/>
-            Motto : Technology's Home Run : Ubiquity!<br/>
+            Programming the Internet of Things (IoT) with a "horses for courses" approach.
+            Applying Artificial Intelligence (AI) and Machine Learning (ML) solutions where applicable.
+            Building apps and services that impact millions of devices, fixing code in production.
           </p>
         </div>
       </div>
