--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,61 +9,67 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-<link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
 
-  </head>
-  <body>
+</head>
+
+<body>
 
 
-<div class="jumbotron bg-transparent mb-0 radius-0">
-  <div class="container">
-      <div class="row">
-        <div class="col-xl-6">
-          <h1 class="display-2">Sanjeev<span class="vim-caret">BA</span></h1>
-          <div class="lead mb-3 text-mono text-success">My thoughts and inspirations.</div>
-          <div class="text-mono">
-            <a href="#!"
-               title="Download Theme"
-               class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-              Strength & Opportunities
+    <div class="jumbotron bg-transparent mb-0 radius-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <h1 class="display-2">Sanjeev <span class="vim-caret">BA</span></h1>
+                    <div class="lead mb-3 text-mono text-success">My thoughts and inspirations.</div>
+                    <div class="text-mono">
+                        <a href="#!" title="Download Theme" class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
+              SW
             </a>
-            <a href="#!"
-               class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
-              Weakness & Threats
+                        <a href="#!" class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+              OT
             </a>
-          </div>
+                    </div>
 
-          <div class="text-darkgrey text-mono my-2">Known is a drop, unknown is an ocean!<br/>Technology's Home Run : Ubiquity!</div>
+                    <div class="text-darkgrey text-mono my-2">Add motto here</div>
+                    <div class="ht-tm-cat">
+                        <a id="badges" class="ht-anchor">Badges</a>
+                        <h5 class="ht-tm-cat-title">Badges</h5>
 
-          <p class="mt-5 text-grey text-spacey">
-            Programming the Internet of Things (IoT) with a "horses for courses" approach.
-            Applying Artificial Intelligence (AI) and Machine Learning (ML) solutions where applicable.
-            Building apps and services that impact millions of devices, fixing code in production.
-          </p>
+                        <div class="ht-tm-codeblock ht-tm-needs-darkness">
+                            <span class="ht-tm-element badge badge-primary">@linkedin</span>
+                            <span class="ht-tm-element badge badge-pill badge-primary">@wordpress</span>
+                            <a href="#!" class="ht-tm-element badge badge-primary">@github</a>
+                            <a href="#!" class="ht-tm-element badge badge-primary">@email</a>
+                        </div>
+                    </div>
+                    <!-- Badges -->
+
+                </div>
+            </div>
         </div>
-      </div>
-  </div>
-</div>
+    </div>
 
 
 
 
-  <div class="container py-5">
-    <h1>Thanks</h1>
+    <div class="container py-5">
+        <h1>Thanks</h1>
 
-    <p>Thank for visiting my website. Hope you enjoy the ride!<br>
-    <a href="https://github.com/HackerThemes/theme-machine">https://github.com/HackerThemes/theme-machine</a></p>
+        <p>Thank for visiting my website. Hope you enjoy the ride!<br>
+            <a href="https://github.com/HackerThemes/theme-machine">https://github.com/HackerThemes/theme-machine</a></p>
 
 
-  </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+</body>
+
 </html>
