--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sanjeev BA Homepage</title>
-
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
@@ -25,10 +24,10 @@
                     <h1 class="display-2">Sanjeev <span class="vim-caret">BA</span></h1>
                     <div class="lead mb-3 text-mono text-success">My thoughts and inspirations.</div>
                     <div class="text-mono">
-                        <a href="#!" title="Download Theme" class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
+                        <a href="#!" title="Download Theme" class="btn btn-info btn-shadow px-3 my-2 ml-0 text-left">
               SW
             </a>
-                        <a href="#!" class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                        <a href="#!" class="btn btn-warning btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
               OT
             </a>
                     </div>
