--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="row">
                 <div class="col-xl-6">
                     <h1 class="display-2">Sanjeev <span class="vim-caret">BA</span></h1>
-                    <div class="lead mb-3 text-mono text-success">My thoughts and inspirations.</div>
+                    <div class="lead mb-3 text-mono text-success">Thoughts and inspiration.</div>
                     <div class="text-mono">
-                        <a href="#!" title="Download Theme" class="btn btn-info btn-shadow px-3 my-2 ml-0 text-left">
+                        <a href="#!" title="Recent Work" class="btn btn-info btn-shadow px-3 my-2 ml-0 text-left">
               SW
             </a>
-                        <a href="#!" class="btn btn-warning btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
+                        <a href="#!" title="Work History" class="btn btn-light btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
               OT
             </a>
                     </div>
