--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     <div class="text-darkgrey text-mono my-2">Add motto here</div>
                     <div class="ht-tm-cat">
-                        <a id="badges" class="ht-anchor">Badges</a>
+                        <a id="badges" class="ht-anchor">Reach Out</a>
                         <h5 class="ht-tm-cat-title">Badges</h5>
 
                         <div class="ht-tm-codeblock ht-tm-needs-darkness">
@@ -42,9 +42,46 @@
                             <span class="ht-tm-element badge badge-pill badge-primary">@wordpress</span>
                             <a href="#!" class="ht-tm-element badge badge-primary">@github</a>
                             <a href="#!" class="ht-tm-element badge badge-primary">@email</a>
+
                         </div>
                     </div>
                     <!-- Badges -->
+
+                    <div class="ht-tm-cat">
+                      <a id="carousel" class="ht-anchor">Speaker Bio</a>
+                      <h5 class="ht-tm-cat-title">Speaker</h5>
+                      <div id="carouselExampleControls" class="ht-tm-element carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                          <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="/images/prague.jpg" alt="LinuxCon EU 2014, Prague" />
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/seattle.jpg" alt="LinuxCon NA 2015, Seattle" />
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/tokyo.jpg" alt="AGL AMM 2016, Tokyo" />
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/paris.jpg" alt="Genivi AMM 2016, Paris" />
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/lasvegas.jpg" alt="CES 2017, Las Vegas" />
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/images/barcelona.jpg" alt="MWC 2018, Barcelona" />
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                    </div> <!-- carousel -->
+
 
                 </div>
             </div>
