--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
                       <div id="carouselExampleControls" class="ht-tm-element carousel slide" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
                           <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="/images/prague.jpg" alt="LinuxCon EU 2014, Prague" />
+                            <img class="d-block img-fluid" src="images/prague.jpg" alt="LinuxCon EU 2014, Prague" />
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/images/seattle.jpg" alt="LinuxCon NA 2015, Seattle" />
+                            <img class="d-block img-fluid" src="images/seattle.jpg" alt="LinuxCon NA 2015, Seattle" />
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/images/tokyo.jpg" alt="AGL AMM 2016, Tokyo" />
+                            <img class="d-block img-fluid" src="images/tokyo.jpg" alt="AGL AMM 2016, Tokyo" />
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/images/paris.jpg" alt="Genivi AMM 2016, Paris" />
+                            <img class="d-block img-fluid" src="images/paris.jpg" alt="Genivi AMM 2016, Paris" />
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/images/lasvegas.jpg" alt="CES 2017, Las Vegas" />
+                            <img class="d-block img-fluid" src="images/lasvegas.jpg" alt="CES 2017, Las Vegas" />
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/images/barcelona.jpg" alt="MWC 2018, Barcelona" />
+                            <img class="d-block img-fluid" src="images/barcelona.jpg" alt="MWC 2018, Barcelona" />
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
