--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <h5 class="ht-tm-cat-title">Badges</h5>
 
                         <div class="ht-tm-codeblock ht-tm-needs-darkness">
-                            <span class="ht-tm-element badge badge-primary">@linkedin</span>
-                            <span class="ht-tm-element badge badge-pill badge-primary">@wordpress</span>
-                            <a href="#!" class="ht-tm-element badge badge-primary">@github</a>
-                            <a href="#!" class="ht-tm-element badge badge-primary">@email</a>
+                            <span class="ht-tm-element badge badge-primary"><a href="https://www.linkedin.com/in/sanjeev-b-a-8605532/" class="ht-tm-element badge badge-primary">@linkedin</a></span>
+                            <span class="ht-tm-element badge badge-pill badge-primary"><a href="https://r2dtoo.blogspot.com" class="ht-tm-element badge badge-primary">@blogger</a></span>
+                            <span class="ht-tm-element badge badge-pill badge-primary"><a href="https://github.com/basanjeev" class="ht-tm-element badge badge-primary">@github</a></span>
+                            <span class="ht-tm-element badge badge-pill badge-primary"><a href="#!" class="ht-tm-element badge badge-primary">@email</a></span>
 
                         </div>
                     </div>
