--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
                     </div>
 
-                    <div class="text-darkgrey text-mono my-2">Add motto here</div>
+                    <div class="text-darkgrey text-mono my-2">Citius, Altius, Fortius</div>
                     <div class="ht-tm-cat">
                         <a id="badges" class="ht-anchor">Reach Out</a>
                         <h5 class="ht-tm-cat-title">Badges</h5>
