--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sanjeev BA</title>
+    <title>Sanjeev BA Homepage</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     
@@ -25,9 +25,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a href="index.html" class="pl-md-0 p-3 text-dark">Start</a>
-            <a href="app.html" class="p-3 text-decoration-none text-dark">App example</a>
-            <a href="form.html" class="p-3 text-decoration-none text-dark">Form example</a>
+            <a href="index.html" class="pl-md-0 p-3 text-dark">Home</a>
+            <a href="app.html" class="p-3 text-decoration-none text-dark">Work Experience</a>
+            <a href="form.html" class="p-3 text-decoration-none text-dark">Projects</a>
           </div>
         </div>
       </nav>
@@ -41,8 +41,8 @@
 <div class="jumbotron bg-light mb-0 radius-0">
   <div class="container">
 
-      <h1 class="display-1">Good News!</h1>
-      <span class="lead">This is a starter template with a jumbotron.</span>
+      <h1 class="display-1">Sanjeev BA</h1>
+      <span class="lead">Homepage.</span>
 
       <div class="mt-4">
         <a href="#!"
