--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
   </div>
 </div>
 
-
-<iframe src ="https://basanjeev.blogspot.com/?" width="100%" height="500">
-  <p>Your browser does not support iFrames.</p>
-</iframe>
+<div class="container py-5 mb5">
+  <iframe src ="https://basanjeev.blogspot.com/?" width="100%" height="500">
+    <p>Your browser does not support iFrames.</p>
+  </iframe>
 </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
