--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <span>Github</span>
         </a>
 
-        <a href="https://www.linkedin.com/in/sanbeam/" class="btn btn-secondary btn-lg my-2">
+        <a href="https://www.linkedin.com/in/sanbeam/" target=”_blank” class="btn btn-secondary btn-lg my-2">
           <span>Linked In</span>
         </a>
       </div>
