Add github URL.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <span class="lead">Homepage.</span>
 
       <div class="mt-4">
-        <a href="#!" class="btn btn-primary btn-lg my-2 mr-2">
+        <a href="https://github.com/sanbeam" target="_blank" class="btn btn-primary btn-lg my-2 mr-2">
           <span>Github</span>
         </a>
 
-        <a href="https://www.linkedin.com/in/sanbeam/" target="_blank" class="btn btn-secondary btn-lg my-2">
+        <a href="https://www.linkedin.com/in/sanbeam" target="_blank" class="btn btn-secondary btn-lg my-2">
           <span>Linked In</span>
         </a>
       </div>
